--- a/chart/registry-sync-tools/values.yaml
+++ b/chart/registry-sync-tools/values.yaml
@@ -11,7 +11,7 @@ image:
 
 pvcRegistrySync:
   storageSize: 10Gi
-  storageClassName: cephfs
+  storageClassName: 
 
 cronjob:
   schedule: "0 0 * * *"
